[package]
name = "grid-rs"
version = "0.1.0"
authors = ["Scott Vickers <scott.w.vickers@gmail.com>"]
edition = "2018"

[features]
wasm-bindgen = ["rand/wasm-bindgen"]

[dependencies]
gust = { path = "../gust", version = "0.1.0" }
line-rs = { path = "../line-rs", version = "0.1.0" }
rand = "0.6.0"
image = "0.21.1"
